--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,16 @@ django-environ==0.11.2
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 idna==3.7
 jwt==1.3.1
+packaging==24.2
 pillow==10.3.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.8.0
 requests==2.32.3
 sqlparse==0.5.0
+typing_extensions==4.12.2
 urllib3==2.2.2
+whitenoise==6.8.2
